--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "homepage": "https://rushilbhatt28.github.io/Covid_tracker.git",
   "name": "covid_tracker",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://rushilbhatt28.github.io/covid__tracker",
   "dependencies": {
     "@material-ui/core": "^4.11.0",
     "@testing-library/jest-dom": "^4.2.4",
